[metadata]
name = bcpp
version = 0.1

description = Bot for the Better C++ Discord community
url = https://github.com/Better-Cpp/Better-C-Bot
project_urls =
    Bug Tracker = https://github.com/palliate/palgen/issues

license = MIT
license_files = LICENSE

platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    bcpp
package_dir = 
    bcpp = src

zip_safe = False
python_requires = >=3.10
include_package_data = True
install_requires = file: requirements.txt

[options.extras_require]
testing = file: requirements_dev.txt

[options.entry_points]
console_scripts =
    bcpp = bcpp:main

[options.package_data]
* = 
    py.typed

[flake8]
extend-ignore = D1, D2, E1, E2, E3, E501, W1, W2, W3, W5
